# mypetcat

./: .gitignore  BUILD-MAC.md  README.md  index.html  package-lock.json  package.json  vercel.json
api/: download.js  stats.js
api/lib/: redis-rest.js
assets/: CREDITS.md
public/cat/: sprites.json
scripts/: copy-installer.mjs  export-sprites-from-aseprite.mjs  generate-app-icons.mjs  generate-icon.ps1  stop-desktop-cat.ps1
src/: catController.ts  catEmotions.ts  catSocial.ts  clickThrough.ts  main.ts  petManager.ts  rng.ts  screenLayout.ts  settings.ts  settingsPanel.ts  spriteAnimator.ts  sprites.d.ts  styles.css  traySetup.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
website/: WEBSITE.md  config.js  index.html  main.js  styles.css
website/scripts/: inject-config.mjs
